objects/pz_object_summer__c.object
<CustomObject>
 <fullName>pz_object_summer__c</fullName>
 <fields>
  <fullName>PZ_custom_field__c</fullName>
  <label>PZ custom field</label>
  <length>22</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>PZ_pick_summer__c</fullName>
  <label>PZ pick summer</label>
  <type>Picklist</type>
  <valueSet>
   <restricted>true</restricted>
   <valueSetDefinition>
    <value>
     <fullName>1</fullName>
    </value>
    <value>
     <fullName>2</fullName>
    </value>
    <value>
     <fullName>3</fullName>
    </value>
    <value>
     <fullName>4</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>pz_object_summer__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>pz object summer</label>
  <lookupFilter>
   <active>true</active>
   <filterItems>
    <field>pz_object_summer__c.OwnerId</field>
    <operation>startsWith</operation>
    <value>0</value>
   </filterItems>
   <isOptional>false</isOptional>
  </lookupFilter>
  <referenceTo>pz_object_summer__c</referenceTo>
  <relationshipLabel>pz object summer</relationshipLabel>
  <relationshipName>pz_object_summer</relationshipName>
  <type>Lookup</type>
 </fields>
 <label>pz object summer</label>
 <listViews>
  <fullName>All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <listViews>
  <fullName>PZ_qu</fullName>
  <columns>NAME</columns>
  <filterScope>Queue</filterScope>
  <label>PZ queue summer</label>
  <language>en_US</language>
  <queue>PZ_queue_summer</queue>
  <sharedTo>
   <allInternalUsers/>
  </sharedTo>
 </listViews>
 <listViews>
  <fullName>PZ_queue_summer_pz_object_summer</fullName>
  <filterScope>Queue</filterScope>
  <label>PZ queue summer</label>
  <queue>PZ_queue_summer</queue>
  <sharedTo>
   <allInternalUsers/>
  </sharedTo>
 </listViews>
 <nameField>
  <label>pz object summer Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>pz object summer</pluralLabel>
 <recordTypes>
  <fullName>PZ_record_type_summer</fullName>
  <active>true</active>
  <label>PZ record type summer</label>
 </recordTypes>
 <sharingModel>ReadWrite</sharingModel>
 <validationRules>
  <fullName>PZ_validation_rule_summer</fullName>
  <active>true</active>
  <errorConditionFormula>CreatedBy.IsActive  = true</errorConditionFormula>
  <errorMessage>error</errorMessage>
 </validationRules>
</CustomObject>